--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Vibur');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +7,7 @@ body {
   background-color: black;
 }
 h1, p, a {
-  font-family: 'Vibur', cursive;
+  font-family: 'Dancing Script', cursive;
 }
 header , .imgscolumn , .footer, .bannerimg {
 max-width: 960px;
@@ -21,7 +21,9 @@ header > h1 {
   color: white;
   margin: 10px;
   text-align: left;
+  display: inline;
 }
+/* MENU */
 .menu{
   text-align: right;
   display: inline;
@@ -34,17 +36,6 @@ header > h1 {
 .menu ul li a {
   color: white;
 }
-.imgscolumn {
-  display: flex;
-  flex-direction: wrap;
-}
-.imgscolumn > article{
-  padding: 40px;
-  background-color: #d5c75f;
-  margin: auto;
-  text-align: center;
-  width: 430px;
-}
 .bannerimg{
   text-align: center;
   margin: auto;
@@ -54,11 +45,37 @@ header > h1 {
 .bannerimg picture img{
   width: 90%;
 }
+
+/* IMAGENES DE ARTICULOS */
+
+.imgscolumn {
+  background-color: #d5c75f;
+  text-align: center;
+  padding: 20px 0 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+.imagenes {
+  display: inline;
+  width: 430px;
+}
+.imagenes > img{
+  display: inline;
+  margin: 0 20px 0 20px;
+  border: 1px solid black;
+}
+
+/* FOOTER */
+
 .footer{
   display: flex;
+  flex-wrap: wrap; 
   flex-direction:wrap;
-  flex-wrap: wrap;
   background-color: #C6d5c5;
+  border-radius: 0 0 10px 10px;
+}
+.footer > div{
+  min-width: 110px;
 }
 .contacto{
   order: 1;
