--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,13 +25,13 @@ body {
 header{
   background-color: #5b7989;
   border-radius: 10px 10px 0 0;
+  padding: 20px;
 }
 header > h1 {
   color: white;
-  margin: 10px;
-  line-height: 50px;
   text-align: left;
   display: inline;
+  line-height: 0.5em;
   text-shadow: 2px 2px #02010a;
   -webkit-text-shadow: 2px 2px #02010a;
   -moz-text-shadow: 2px 2px #02010a;
@@ -40,8 +40,7 @@ header > h1 {
 
 /* MENU */
 .menu{
-  text-align: right;
-  display: inline;
+  float: right;
 }
 .menu ul li {
   text-decoration: none;
@@ -50,7 +49,9 @@ header > h1 {
 }
 .menu ul li a {
   color: white;
+  font-size: 1em;
 }
+/* BANNER */
 .bannerimg{
   text-align: center;
   margin: auto;
@@ -65,6 +66,8 @@ header > h1 {
 
 article {
   margin: auto;
+  text-decoration: underline;
+  font-weight: bold;
 }
 .imgscolumn {
   background-color: #d5c75f;
@@ -81,8 +84,16 @@ article {
   margin: 0 20px 0 20px;
   border: 1px solid black;
 }
-
-
+#paisaje:hover{
+  border: 2px solid #82c3a6;
+  transform: rotate(-10deg);
+  transition-duration: 1s;
+}
+#retrato:hover{
+  border: 2px solid #82c3a6;
+  transform: translate(20px, -5px);
+  transition-duration: 1s;
+}
 /* FOOTER */
 
 .footer{
