--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
-* {
+*{
   margin: 0;
   padding: 0;
   font-family: 'Dancing Script', cursive;
 }
-img {
+p{
+  font-weight: bold;
+  color: black;
+}
+img{
   box-shadow: 2px 2px #02010a;
   -webkit-box-shadow: 2px 2px #02010a;
   -moz-box-shadow: 2px 2px #02010a;
   -o-box-shadow: 2px 2px #02010a;
 }
-body {
+body{
   background-color: #02010a;
 }
 .contenido{
@@ -94,6 +98,7 @@ article {
   transform: translate(20px, -5px);
   transition-duration: 1s;
 }
+
 /* FOOTER */
 
 .footer{
@@ -105,8 +110,12 @@ article {
   padding-top: 20px;
   padding-bottom: 10px; 
 }
+.footer a{
+  font-weight: bold;
+  color: black;
+}
 .footer > div{
-  min-width: 110px;
+  min-width: 130px;
 }
 .contacto{
   order: 1;
