--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 *{
-  margin: 0;
-  padding: 0;
   font-family: 'Dancing Script', cursive;
 }
 p{
@@ -16,6 +14,7 @@ img{
 }
 body{
   background-color: #02010a;
+  margin: 1em;
 }
 .contenido{
   margin: auto;
@@ -35,7 +34,7 @@ header > h1 {
   color: white;
   text-align: left;
   display: inline;
-  line-height: 0.5em;
+  line-height: 1em;
   text-shadow: 2px 2px #02010a;
   -webkit-text-shadow: 2px 2px #02010a;
   -moz-text-shadow: 2px 2px #02010a;
@@ -49,7 +48,10 @@ header > h1 {
 .menu ul li {
   text-decoration: none;
   display: inline;
-  margin: 10px;
+  margin: 0.4em;
+}
+.activo {
+  text-decoration: none;
 }
 .menu ul li a {
   color: white;
@@ -90,13 +92,21 @@ article {
 }
 #paisaje:hover{
   border: 2px solid #82c3a6;
-  transform: rotate(-10deg);
-  transition-duration: 1s;
+  -webkit-transform: rotate(-10deg);
+  -webkit-transition-duration: 1s;
+  -moz-transform: rotate(-10deg);
+  -moz-transition-duration: 1s;
+  -o-transform: rotate(-10deg);
+  -o-transition-duration: 1s;
 }
 #retrato:hover{
   border: 2px solid #82c3a6;
-  transform: translate(20px, -5px);
-  transition-duration: 1s;
+  -webkit-transform: translate(20px, -5px);
+  -webkit-transition-duration: 1s;
+  -moz-transform: translate(20px, -5px);
+  -moz-transition-duration: 1s;
+  -o-transform: translate(20px, -5px);
+  -o-transition-duration: 1s;
 }
 
 /* FOOTER */
@@ -107,15 +117,16 @@ article {
   flex-direction:wrap;
   background-color: #C6d5c5;
   border-radius: 0 0 10px 10px;
-  padding-top: 20px;
-  padding-bottom: 10px; 
+  padding-bottom: 20px; 
 }
 .footer a{
   font-weight: bold;
   color: black;
 }
 .footer > div{
-  min-width: 130px;
+  min-width: 165px;
+  margin: auto;
+  margin-top: 20px;
 }
 .contacto{
   order: 1;
@@ -136,4 +147,34 @@ article {
   order: 4;
   max-width: 20%;
   padding-left: 5%;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 900px){
+  header{
+    text-align: center;
+  }
+  .menu{
+    float: none;
+    margin: auto;
+    margin-top: 2em;
+
+  }
+  .footer{
+    flex-direction: column;
+  }
+  .menu ul {
+    padding: 0;
+  }
+}
+@media (max-width: 420px){
+  .imagenes > img{
+    width: 80%;
+  }
+  .footer > div {
+    float: left;
+    margin: 0;
+    margin-top: 1em;
+  }
 }
